<resources>
    <string name="app_name">Lista Asistencia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Asistencia de personal</string>
    <string name="nav_header_subtitle">Pinos agricola</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="channel_id_trabajadores">100</string>
    <string name="channel_id_catalogos">101</string>
    <string name="notification_title_catalogos">actualizando catalogos</string>
    <string name="notification_title">actualizando trabajadores</string>
    <string name="notification_iniciar">Iniciando notificacion</string>
    <string name="notification_finalizada">Proceso finalizado</string>
    <string name="notification_fallido">Proceso fallido. Vuelva a intentar</string>
    <string name="notification_conectaxion">Conectando al servidor</string>
    <string name="notification_en_progreso">actualizando...</string>
    <string name="notification_puestos">Actualizando puestos...</string>
    <string name="notification_Actividades">Actualizando actividades...</string>
    <string name="notification_mallas">actualizando mallas...</string>
    <string name="notification_permisos">Actualizando permisos...</string>
    <string name="notification_tiposActividades">Actualizando tipos de actividades...</string>

    <string name="menu_listaCuadrilla">Cuadrillas</string>
    <string name="menu_actualizar">actualizar</string>
    <string name="menu_enviar">enviar informacion</string>
    <string name="menu_configruacion">Configuracion</string>
    <string name="menu_detalle">Trabajadores</string>
    <string name="menu_actividades">Actividades realizadas</string>
    <string name="menu_finalizar">Finalizar cudrillas</string>

    <string name="horaIncio">Hora Inicial</string>
    <string name="horaFinal">Hora Final</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TODO: titulos-->
    <string name="titulo_importacion">Actualizacion de catalogos</string>
    <string name="titulo_exportacion">enviar asistencias</string>

    <!--TODO: mensajes-->
    <string name="msn_inicio">INICIANDO ACTUALIZACION DE DATOS</string>
    <string name="msn_inicio_envio">INICIANDO ENVIO DE DATOS</string>
    <string name="msn_buscando">BUSCANDO DATOS</string>
    <string name="msn_fin">IMPORTACION DE DATOS EXITOSAMENTE</string>
    <string name="msn_fin_trabajadores">IMPORTACION DE TRABAJADORES EXITOSAMENTE</string>
    <string name="msn_sinConexion">CONEXION CON EL SERVIDOR NO ESTABLECIDA</string>
    <string name="msn_lista_vacios">NO SE ENCONTRARON DATOS</string>
    <string name="msn_enesperado">!!!ERROR INESPERADO</string>
    <string name="msn_errorTipoActividad">!!!ERROR. Tipo de actividad no valida</string>

    <!--TODO: titulos botonoes-->
    <string name="btn_guardar">guardar</string>
    <string name="btn_cancelar">cancelar</string>
    <string name="btn_continuar">continuar</string>
</resources>
