<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeFragmen"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_listaCuadrilla" />
        <item
            android:id="@+id/nav_importacion"
            android:icon="@drawable/ic_system_update_black_24dp"
            android:title="@string/menu_actualizar" />

        <item
            android:id="@+id/nav_exportar"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/menu_enviar" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_api_24px"
            android:title="@string/menu_configruacion" />
    </group>
</menu>
